--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.0.4",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
