--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "formik": "^2.4.5", 
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -18,7 +19,9 @@
     "react-query": "^3.39.3",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.0.4",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "sweetalert": "^2.1.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "latest",
