--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.45.0",
+    "eslint-config-next": "^14.2.4",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
-    "formik": "^2.4.5", 
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "formik": "^2.4.5",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
-    "react-query": "^3.39.3",
     "react-tsparticles": "^2.12.2",
+    "sweetalert": "^2.1.2",
     "swiper": "^11.0.4",
     "tsparticles": "^2.12.0",
-    "sweetalert": "^2.1.2",
     "yup": "^1.1.1"
   },
   "devDependencies": {
